--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
   <body>
 
-  <p><center><font size="4">Stephen Lucas, Lead Creative Progammer for Composition Studies at UNT created this game and programmed the code in 
-      html, css, and javascript. I have taken Stephen's game and made it minimal in the style of Abstract Expressionsim of the post-war
-    era. During our term you will take this code and repurpose the game to create an aesthetic of your own. W and S control the left paddle;
-      the up and down arrows control the right paddle. I made the sounds as notes generated in audacity; the ambient sound is relatively low note 
-      (measured in Hz) with a Paulstretch effect.</font></center></p>
+  <p><center><font size="4"> Taking the ambiance from the office in Five Nights at Freddys, along with the darker color of the ball,
+    it is meant to replicate the feeling of having to search for the focus before getting killed, or in this case, your opponent 
+    gaining a point. This is meant to increase focus, fear, and create an immersive surrounding that aids in the horror aspect of the game.
+    Even with such a simple game, I hope to cause nervousness and distress, good luck!
+    
+    Use W & S control the left paddle; and the up & down arrows control the right paddle. </font></center></p>
     
     <div id="game">
       <div class="paddle" id="left-paddle"></div>
