--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Audio PONG</title>
+    <title>Office PONG</title>
     <script src="./javascript/Tone.js"></script>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./pong-styles.css" />
@@ -12,7 +12,7 @@
   <body>
 
   <p><center><font size="4"> Taking the ambiance from the office in Five Nights at Freddys, along with the darker color of the ball,
-    it is meant to replicate the feeling of having to search for the focus before getting killed, or in this case, your opponent 
+    it is meant to replicate the feeling of having to search for the character before getting killed, or in this case, your opponent 
     gaining a point. This is meant to increase focus, fear, and create an immersive surrounding that aids in the horror aspect of the game.
     Even with such a simple game, I hope to cause nervousness and distress, good luck!
     
