--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="./javascript/Tone.js"></script>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./pong-styles.css" />
-    <link rel="shortcut icon" href="./icon.png">
+     <link rel="icon" type="image/png" href="FNAF_Icon.png">
 
   </head>
 
