--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <body>
 
-  <p><center><font size="4"> Taking the ambiance from the office in Five Nights at Freddys, along with the darker color of the ball,
-    it is meant to replicate the feeling of having to search for the character before getting killed, or in this case, your opponent 
+  <p><center><font size="4"> Taking the ambience from the office in Five Nights at Freddys, along with the harsh red of the ball,
+    this is meant to replicate the feeling of seeing the enemy, but not being able to fully control its movements, and thus, fearing death; or in this case, your opponent 
     gaining a point. This is meant to increase focus, fear, and create an immersive surrounding that aids in the horror aspect of the game.
     Even with such a simple game, I hope to cause nervousness and distress, good luck!
     
